fix(header-img): switch low quality image on mobile device
when screen size is below 900px, then switch background image of header
to low quality

--- a/style.css
+++ b/style.css
@@ -400,6 +400,9 @@ footer svg>.icon {
 ================== */
 
 @media (max-width: 900px) {
+    .header {
+        background-image: url('./images/mobile/image-header.jpg');
+    }
     .feature__img,
     .feature__text {
         grid-column: full-start/full-end;
